--- a/Sale_Squared/.settings/org.eclipse.core.resources.prefs
+++ b/Sale_Squared/.settings/org.eclipse.core.resources.prefs
@@ -1,2 +1,4 @@
 eclipse.preferences.version=1
 encoding//src/Interface/Home.java=UTF-8
+encoding//src/Interface/Leilao_Base.java=UTF-8
+encoding//src/Interface/Produto_Base.java=UTF-8
