--- a/Sale_Squared/.settings/org.eclipse.core.resources.prefs
+++ b/Sale_Squared/.settings/org.eclipse.core.resources.prefs
@@ -1,5 +1,6 @@
 eclipse.preferences.version=1
 encoding//src/Interface/Categorias.java=UTF-8
 encoding//src/Interface/Sale_Squared.java=UTF-8
+encoding//src/Interface/Tabbed_Anuncio.java=UTF-8
 encoding//src/Interface/Tabbed_Outros.java=UTF-8
 encoding//src/Interface/Tabbed_Produtos.java=UTF-8
