--- a/Sale_Squared/.settings/org.eclipse.core.resources.prefs
+++ b/Sale_Squared/.settings/org.eclipse.core.resources.prefs
@@ -1,4 +1,5 @@
 eclipse.preferences.version=1
+encoding//src/Interface/Anuncio_Compra.java=UTF-8
 encoding//src/Interface/Categorias.java=UTF-8
 encoding//src/Interface/Sale_Squared.java=UTF-8
 encoding//src/Interface/Tabbed_Anuncio.java=UTF-8
