--- a/codigo/SS_camNegDad/nbproject/project.properties
+++ b/codigo/SS_camNegDad/nbproject/project.properties
@@ -25,9 +25,11 @@ dist.dir=dist
 dist.jar=${dist.dir}/SS_camNegDad.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.ojdbc6.jar=C:\\Program Files\\Java\\jdk1.7.0_10\\lib\\ojdbc6.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.ojdbc6.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -51,6 +53,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
+main.class=Teste.teste
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=true
 platform.active=default_platform
