--- a/Sale_Squared/.classpath
+++ b/Sale_Squared/.classpath
@@ -1,14 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="src" path="src" />
-	<classpathentry kind="con"
-		path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.launching.macosx.MacOSXType/Java SE 6" />
-	<classpathentry kind="lib" path="jcalendar-1.4.1.v201109071408.jar" />
-	<classpathentry kind="lib" path="jgoodies-common-1.2.0.jar" />
-	<classpathentry kind="lib" path="jgoodies-looks-2.4.1.jar" />
-	<classpathentry kind="lib" path="junit-4.6.jar" />
-	<classpathentry kind="lib" path="miglayout15-swing.jar"
-		sourcepath="miglayout-src.zip" />
-	<classpathentry kind="lib" path="swingx-all-1.6.4.jar" />
-	<classpathentry kind="output" path="bin" />
+	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.launching.macosx.MacOSXType/Java SE 6"/>
+	<classpathentry kind="lib" path="jcalendar-1.4.1.v201109071408.jar"/>
+	<classpathentry kind="lib" path="jgoodies-common-1.2.0.jar"/>
+	<classpathentry kind="lib" path="jgoodies-looks-2.4.1.jar"/>
+	<classpathentry kind="lib" path="junit-4.6.jar"/>
+	<classpathentry kind="lib" path="miglayout15-swing.jar" sourcepath="miglayout-src.zip"/>
+	<classpathentry kind="lib" path="swingx-all-1.6.4.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.launching.macosx.MacOSXType/Java SE 7 (MacOS X Default)"/>
+	<classpathentry kind="output" path="bin"/>
 </classpath>
