--- a/.gitignore
+++ b/.gitignore
@@ -1,71 +1,26 @@
-<<<<<<< HEAD
-## generic files to ignore
-*~
-*.lock
-*.DS_Store
+*.pydevproject
+.project
+.metadata
+bin/**
+tmp/**
+tmp/**/*
+*.tmp
+*.bak
 *.swp
-*.out
+*~.nib
+local.properties
+.classpath
+.settings/
+.loadpath
 
-#java specific
-*.class
+# External tool builders
+.externalToolBuilders/
 
-#eclipse 
-*/bin
+# Locally stored "Eclipse launch configurations"
+*.launch
 
+# CDT-specific
+.cproject
 
-#netbeans ignore personal stuff 
-nbproject/private/
-
-
-## generic files to ignore
-*~
-*.lock
-*.DS_Store
-*.swp
-*.out
-
-=======
-# Compiled source #
-###################
-*.com
-*.class
-*.dll
-*.exe
-*.o
-*.so
-
-# Packages #
-############
-# it's better to unpack these files and commit the raw source
-# git has its own built in compression methods
-*.7z
-*.dmg
-*.gz
-*.iso
-*.jar
-*.rar
-*.tar
-*.zip
-
-# Logs and databases #
-######################
-*.log
-*.sql
-*.sqlite
-
-# OS generated files #
-######################
-.DS_Store
-.DS_Store?
-._*
-.Spotlight-V100
-.Trashes
-Icon?
-ehthumbs.db
-Thumbs.db
-
-# pastas
-~/Dropbox/LEI/DSS/trabalho/fase_2_dss/codigo/SS_camNegDad/dist/
-~/Dropbox/LEI/DSS/trabalho/fase_2_dss/codigo/SS_camNegDad/nbproject/
-~/Dropbox/LEI/DSS/trabalho/fase_2_dss/codigo/SS_camNegDad/build.xml
->>>>>>> 49teste
+# PDT-specific
+.buildpath
