--- a/Sale_Squared/.classpath
+++ b/Sale_Squared/.classpath
@@ -1,21 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="lib" path="jcalendar-1.4.1.v201109071408.jar"/>
-	<classpathentry kind="lib" path="jgoodies-common-1.2.0.jar"/>
-	<classpathentry kind="lib" path="jgoodies-looks-2.4.1.jar"/>
-	<classpathentry kind="lib" path="junit-4.6.jar"/>
-	<classpathentry kind="lib" path="miglayout15-swing.jar" sourcepath="miglayout-src.zip"/>
-	<classpathentry kind="lib" path="swingx-all-1.6.4.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
-	<classpathentry kind="lib" path="/Users/ricardobranco/DSS_BD/Sale_Squared/ojdbc6_g.jar"/>
-	<classpathentry kind="lib" path="/Users/ricardobranco/DSS_BD/Sale_Squared/jcalendar-1.4.1.v201109071408.jar"/>
-	<classpathentry kind="lib" path="/Users/ricardobranco/DSS_BD/Sale_Squared/jgoodies-common-1.2.0.jar"/>
-	<classpathentry kind="lib" path="/Users/ricardobranco/DSS_BD/Sale_Squared/jgoodies-looks-2.4.1.jar"/>
-	<classpathentry kind="lib" path="/Users/ricardobranco/DSS_BD/Sale_Squared/junit-4.6.jar"/>
-	<classpathentry kind="lib" path="/Users/ricardobranco/DSS_BD/Sale_Squared/miglayout-src.zip"/>
-	<classpathentry kind="lib" path="/Users/ricardobranco/DSS_BD/Sale_Squared/miglayout15-swing.jar"/>
-	<classpathentry kind="lib" path="/Users/ricardobranco/DSS_BD/Sale_Squared/swingx-all-1.6.4.jar"/>
-	<classpathentry kind="lib" path="/Users/ricardobranco/Downloads/java-mail-1.4.4.jar"/>
+	<classpathentry kind="lib" path="jcalendar-1.4.jar"/>
+	<classpathentry kind="lib" path="ojdbc6_g.jar"/>
+	<classpathentry kind="lib" path="swingx-all-1.6.4.jar"/>
+	<classpathentry kind="lib" path="jgoodies-looks-2.4.1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
