--- a/Sale_Squared/nbproject/private/private.properties
+++ b/Sale_Squared/nbproject/private/private.properties
@@ -1,3 +1,3 @@
 compile.on.save=true
 javac.debug=true
-user.properties.file=C:\\Users\\psfdc\\AppData\\Roaming\\NetBeans\\7.2.1\\build.properties
+user.properties.file=/Users/ricardobranco/Library/Application Support/NetBeans/7.2.1/build.properties
