--- a/Sale_Squared/nbproject/project.properties
+++ b/Sale_Squared/nbproject/project.properties
@@ -39,7 +39,8 @@ javac.classpath=\
     ${file.reference.jcalendar-1.4.jar}:\
     ${file.reference.ojdbc6_g.jar}:\
     ${file.reference.swingx-all-1.6.4.jar}:\
-    ${file.reference.jgoodies-looks-2.4.1.jar}
+    ${file.reference.jgoodies-looks-2.4.1.jar}:\
+    ${libs.swing-layout.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
