--- a/Sale_Squared/nbproject/project.properties
+++ b/Sale_Squared/nbproject/project.properties
@@ -32,6 +32,7 @@ file.reference.jcalendar-1.4.jar=jcalendar-1.4.jar
 file.reference.jgoodies-looks-2.4.1.jar=jgoodies-looks-2.4.1.jar
 file.reference.ojdbc6_g.jar=ojdbc6_g.jar
 file.reference.Sale_Squared-src=src
+file.reference.swing-layout-1.0.4.jar=C:\\Program Files (x86)\\NetBeans 7.2.1\\platform\\modules\\ext\\swing-layout-1.0.4.jar
 file.reference.swingx-all-1.6.4.jar=swingx-all-1.6.4.jar
 includes=**
 jar.compress=false
@@ -40,7 +41,7 @@ javac.classpath=\
     ${file.reference.ojdbc6_g.jar}:\
     ${file.reference.swingx-all-1.6.4.jar}:\
     ${file.reference.jgoodies-looks-2.4.1.jar}:\
-    ${libs.swing-layout.classpath}
+    ${file.reference.swing-layout-1.0.4.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
