--- a/SaleSquared/nbproject/project.properties
+++ b/SaleSquared/nbproject/project.properties
@@ -30,6 +30,7 @@ dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.jcalendar-1.4.jar=jcalendar-1.4.jar
 file.reference.jgoodies-looks-2.4.1.jar=jgoodies-looks-2.4.1.jar
+file.reference.jidebuilder-2.0.jar=/Users/ricardobranco/Downloads/jidebuilder-2.0-binary/jidebuilder-2.0.jar
 file.reference.ojdbc6_g.jar=ojdbc6_g.jar
 file.reference.Sale_Squared-src=src
 file.reference.swing-layout-1.0.4.jar=C:\\Program Files (x86)\\NetBeans 7.2.1\\platform\\modules\\ext\\swing-layout-1.0.4.jar
@@ -42,7 +43,8 @@ javac.classpath=\
     ${file.reference.swingx-all-1.6.4.jar}:\
     ${file.reference.jgoodies-looks-2.4.1.jar}:\
     ${file.reference.swing-layout-1.0.4.jar}:\
-    ${libs.swing-layout.classpath}
+    ${libs.swing-layout.classpath}:\
+    ${file.reference.jidebuilder-2.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
