--- a/SaleSquared/nbproject/private/private.properties
+++ b/SaleSquared/nbproject/private/private.properties
@@ -1,4 +1,6 @@
 compile.on.save=true
-file.reference.swing-layout-1.0.4.jar=/Users/ricardobranco/DSS_BD/SaleSquared/swingx-all-1.6.4.jar
+do.depend=false
+do.jar=true
 javac.debug=true
-user.properties.file=C:\\Users\\psfdc\\AppData\\Roaming\\NetBeans\\7.2.1\\build.properties
+javadoc.preview=true
+user.properties.file=/Users/ricardobranco/Library/Application Support/NetBeans/7.2.1/build.properties
