--- a/SaleSquared/nbproject/private/private.properties
+++ b/SaleSquared/nbproject/private/private.properties
@@ -1,6 +1,4 @@
 compile.on.save=true
-do.depend=false
-do.jar=true
+file.reference.swing-layout-1.0.4.jar=/Users/ricardobranco/DSS_BD/SaleSquared/swingx-all-1.6.4.jar
 javac.debug=true
-javadoc.preview=true
-user.properties.file=/Users/ricardobranco/Library/Application Support/NetBeans/7.2.1/build.properties
+user.properties.file=C:\\Users\\psfdc\\AppData\\Roaming\\NetBeans\\7.2.1\\build.properties
