--- a/SaleSquared/nbproject/project.properties
+++ b/SaleSquared/nbproject/project.properties
@@ -1,10 +1,9 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
+annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
-application.title=SaleSquared
-application.vendor=ricardobranco
 auxiliary.org-netbeans-modules-projectimport-eclipse-core.key=src=src;file=jcalendar-1.4.jar;file=ojdbc6_g.jar;file=swingx-all-1.6.4.jar;file=jgoodies-looks-2.4.1.jar;output=bin;
 auxiliary.org-netbeans-modules-projectimport-eclipse-core.project=.
 auxiliary.org-netbeans-modules-projectimport-eclipse-core.timestamp=1359145171894
@@ -28,25 +27,24 @@ debug.test.classpath=\
 dist.dir=dist
 dist.jar=${dist.dir}/SaleSquared.jar
 dist.javadoc.dir=${dist.dir}/javadoc
-endorsed.classpath=
 excludes=
 file.reference.jcalendar-1.4.jar=jcalendar-1.4.jar
 file.reference.jgoodies-looks-2.4.1.jar=jgoodies-looks-2.4.1.jar
+file.reference.jidebuilder-2.0.jar=/Users/ricardobranco/Downloads/jidebuilder-2.0-binary/jidebuilder-2.0.jar
 file.reference.ojdbc6_g.jar=ojdbc6_g.jar
 file.reference.Sale_Squared-src=src
-file.reference.swing-layout-1.0.4.jar=swing-layout-1.0.4.jar
+file.reference.swing-layout-1.0.4.jar=C:\\Program Files (x86)\\NetBeans 7.2.1\\platform\\modules\\ext\\swing-layout-1.0.4.jar
 file.reference.swingx-all-1.6.4.jar=swingx-all-1.6.4.jar
 includes=**
-jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
-jar.index=${jnlp.enabled}
 javac.classpath=\
     ${file.reference.jcalendar-1.4.jar}:\
     ${file.reference.ojdbc6_g.jar}:\
     ${file.reference.swingx-all-1.6.4.jar}:\
     ${file.reference.jgoodies-looks-2.4.1.jar}:\
+    ${file.reference.swing-layout-1.0.4.jar}:\
     ${libs.swing-layout.classpath}:\
-    ${file.reference.swing-layout-1.0.4.jar}
+    ${file.reference.jidebuilder-2.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -70,15 +68,6 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-jnlp.codebase.type=no.codebase
-jnlp.descriptor=application
-jnlp.enabled=false
-jnlp.mixed.code=default
-jnlp.offline-allowed=false
-jnlp.signed=false
-jnlp.signing=
-jnlp.signing.alias=
-jnlp.signing.keystore=
 main.class=Presentation_Layer.Sale_Squared
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=true
