--- a/SaleSquared/nbproject/private/private.properties
+++ b/SaleSquared/nbproject/private/private.properties
@@ -3,4 +3,4 @@ do.depend=false
 do.jar=true
 javac.debug=true
 javadoc.preview=true
-user.properties.file=/Users/ricardobranco/Library/Application Support/NetBeans/7.2.1/build.properties
+user.properties.file=C:\\Users\\psfdc\\AppData\\Roaming\\NetBeans\\7.2.1\\build.properties
